# stp

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
src/stp/: __init__.py  main.py
src/wastp/: __init__.py  main.py
