[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wastp"
description = "SVG to PNG web converter"
readme = "README.md"
version = "v1.0"
dependencies = [
    "uvicorn",
    "fastapi",
    "cairosvg"
]
authors = [{name = "Nakidai", email = "plaza521@inbox.ru"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
wastp = "wastp:main"
